--- a/xero/code/requirements.txt
+++ b/xero/code/requirements.txt
@@ -1,9 +1,9 @@
-flask==2.0.2
-werkzeug==2.0.3
-apache-beam==2.35.0
-google-cloud-storage==1.43.0
-google-cloud-secret-manager==2.8.0
-requests-oauthlib==1.3.0
-structlog==21.5.0
-cachetools==4.2.4
-gunicorn==20.1.0
+apache-airflow==2.3.0
+apache-beam==2.38.0
+google-cloud-storage==2.0.0
+google-cloud-secret-manager==2.12.0
+oauthlib==3.2.0
+requests-oauthlib==1.3.1
+cachetools==5.0.0
+structlog==22.1.0
+flask==2.1.0
