--- a/xero/code/requirements.txt
+++ b/xero/code/requirements.txt
@@ -5,4 +5,6 @@ oauthlib==3.2.0
 requests-oauthlib==1.3.1
 cachetools==5.0.0
 structlog==22.1.0
-flask==2.1.0
+Flask==2.1.0
+Werkzeug==2.1.0
+requests==2.27.1
