--- a/xero/code/requirements.txt
+++ b/xero/code/requirements.txt
@@ -1,4 +1,3 @@
-apache-beam==2.38.0
 google-cloud-storage==2.0.0
 google-cloud-secret-manager==2.12.0
 oauthlib==3.2.0
@@ -9,3 +8,4 @@ Flask==2.1.0
 Werkzeug==2.1.0
 requests==2.27.1
 google-cloud-bigquery==2.34.3
+ratelimit==2.2.1
